updates to algo